Fix for https://bugs.webkit.org/show_bug.cgi?id=38557 r58526 introduced a ~30% regression on Dromaeo JS lib

Reviewed by Darin Adler.

This fix does two things.
- Don't use QualifiedName as the key to a HashMap, use a
  RefPtr<QualifiedNameImpl> instead.  We should remove the HashTraits for
  QualifiedName and that will happen in a follow up patch.
- Only mark cached NodeLists on Documents instead of all Nodes. This is
  okay since the marking of NodeLists is an optimization to keep NodeList
  wrappers alive and is not mandated by any spec.

* bindings/js/JSDocumentCustom.cpp:
(WebCore::JSDocument::markChildren):
* bindings/js/JSNodeCustom.cpp:
(WebCore::JSNode::markChildren):
* dom/Node.cpp:
(WebCore::Node::removeCachedTagNodeList):
(WebCore::Node::getElementsByTagNameNS):
* dom/NodeRareData.h:



git-svn-id: svn://svn.chromium.org/blink/trunk@59058 bbb929c8-8fbe-4397-9dbb-9b2b20218538